[project]
name = "ipyhop-temporal"
version = "0.1.0"
description = "IPyHOP - Iterative Hierarchical Ordered Planner with Temporal Planning Support"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "K. S. Ernest (iFire) Lee"},
    {name = "Yash Bansod", email = ""}
]
keywords = ["planning", "htn", "temporal-planning", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=2.5,<3.0",
    "matplotlib>=3.3.0",
    "numpy>=1.19.3",
    "tqdm>=4.36.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/YashBansod/IPyHOP"
Repository = "https://github.com/YashBansod/IPyHOP"
Documentation = "https://github.com/YashBansod/IPyHOP/wiki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipyhop"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["ipyhop_tests", "test_temporal.py", "test_temporal_ad_hoc.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

